test/compile-fail/resolution/conflicts/struct-use/expected.txt
error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/struct-use/top.rhdl:1:8
  │
1 │ struct a {}
  │        - previous definition of the name `a` here
  ·
5 │ use b::a;
  │        ^ `a` redefined here

